fix for Granted Authourity sonar issue